--- a/portfolio.html
+++ b/portfolio.html
@@ -335,6 +335,25 @@
             </a>
           </div>
         </div>
+        <div class="footer-form-box">
+          <form class="footer-form">
+            <label>
+              <p class="footer-form-tittle">ZAPISZ SIE DO NEWSLETTERA</p>
+              <input
+                class="footer-input"
+                type="text"
+                name="newsletter-email"
+                placeholder="E-mail"
+              />
+            </label>
+          </form>
+          <button class="footer-form-button" type="submit">
+            <p>Zapisz się</p>
+            <svg width="24px" height="24px">
+              <use href="./images/icons.svg#icon-paperplane"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </footer>
   </body>
