--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
               <p class="footer-form-tittle">ZAPISZ SIE DO NEWSLETTERA</p>
               <input
                 class="footer-input"
-                type="text"
+                type="email"
                 name="newsletter-email"
                 placeholder="E-mail"
               />
