--- a/portfolio.html
+++ b/portfolio.html
@@ -341,7 +341,7 @@
               <p class="footer-form-tittle">ZAPISZ SIE DO NEWSLETTERA</p>
               <input
                 class="footer-input"
-                type="text"
+                type="email"
                 name="newsletter-email"
                 placeholder="E-mail"
               />
